--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,5 +4,6 @@
         parent="@style/AppTheme">
         <item name="colorAccent">@android:color/holo_red_light</item>
         <item name="colorPrimary">@android:color/holo_red_dark</item>
+        <item name="android:colorPrimaryDark">@android:color/holo_red_dark</item>
     </style>
 </resources>
