--- a/app/src/main/res/layout/activity_editing.xml
+++ b/app/src/main/res/layout/activity_editing.xml
@@ -17,7 +17,8 @@
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:id="@+id/top_priorities_layout">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -26,28 +27,13 @@
                     android:text="Top Priorities"
                     android:id="@+id/textView" />
 
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/editText" />
-
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/editText2"
-                    android:layout_gravity="center_horizontal" />
-
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/editText3"
-                    android:layout_gravity="center_horizontal" />
             </LinearLayout>
 
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:id="@+id/not_priorities_layout"
                 android:layout_marginTop="30dp">
 
                 <TextView
@@ -57,22 +43,7 @@
                     android:text="Not Priorities"
                     android:id="@+id/textView2" />
 
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/editText4" />
-
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/editText5" />
-
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/editText6" />
             </LinearLayout>
-
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
